--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 *.txt
 *.psd
 notepad.html
-index-with-glossary-and-immune.html
+index-with-glossary.html
+index-immune.html
 slideout.html
 css/style-with-glossary.css
 scss/style-with-glossary.scss
 img/immune-responses/
-js/
+js/accordion.js
+js/slideout.js
 
 
 
