--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ index-with-glossary.html
 index-immune.html
 slideout.html
 css/style-with-glossary.css
+css/style-immune.css
 scss/style-with-glossary.scss
+scss/style-immune.scss
 img/immune-responses/
 js/accordion.js
 js/slideout.js
